tests and docs for comments handler
