# docs/swagger.yaml
@@ -1,5 +1,20 @@
 basePath: /api/v1
 definitions:
+  model.Comment:
+    properties:
+      body:
+        type: string
+      id:
+        type: integer
+      postId:
+        type: integer
+      userId:
+        type: integer
+    required:
+    - body
+    - postId
+    - userId
+    type: object
   model.Post:
     properties:
       body:
@@ -13,6 +28,13 @@ definitions:
     required:
     - body
     - title
+    type: object
+  model.UpdateComment:
+    properties:
+      body:
+        type: string
+    required:
+    - body
     type: object
   model.UpdatePost:
     properties:
@@ -298,6 +320,202 @@ paths:
       summary: updatePost
       tags:
       - posts
+  /api/v1/users/{userId}/posts/{postId}/comments:
+    get:
+      consumes:
+      - application/json
+      - text/xml
+      description: getCommentsByPostId
+      operationId: getCommentsByPostId
+      parameters:
+      - description: userId
+        in: path
+        name: userId
+        required: true
+        type: integer
+      - description: postId
+        in: path
+        name: postId
+        required: true
+        type: integer
+      - description: Authorization
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      - text/xml
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Comment'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/server.Message'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/server.Message'
+      security:
+      - ApiKeyAuth: []
+      summary: getCommentsByPostId
+      tags:
+      - comments
+    post:
+      consumes:
+      - application/json
+      - text/xml
+      description: createComment
+      operationId: createComment
+      parameters:
+      - description: userId
+        in: path
+        name: userId
+        required: true
+        type: integer
+      - description: postId
+        in: path
+        name: postId
+        required: true
+        type: integer
+      - description: post
+        in: body
+        name: comment
+        required: true
+        schema:
+          $ref: '#/definitions/model.Comment'
+      - description: Authorization
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      - text/xml
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.Comment'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/server.Message'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/server.Message'
+      security:
+      - ApiKeyAuth: []
+      summary: createComment
+      tags:
+      - comments
+  /api/v1/users/{userId}/posts/{postId}/comments/{commentId}:
+    delete:
+      consumes:
+      - application/json
+      - text/xml
+      description: deleteComment
+      operationId: deleteComment
+      parameters:
+      - description: userId
+        in: path
+        name: userId
+        required: true
+        type: integer
+      - description: postId
+        in: path
+        name: postId
+        required: true
+        type: integer
+      - description: commentId
+        in: path
+        name: commentId
+        required: true
+        type: integer
+      - description: Authorization
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      - text/xml
+      responses:
+        "204":
+          description: ""
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/server.Message'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/server.Message'
+      security:
+      - ApiKeyAuth: []
+      summary: deleteComment
+      tags:
+      - comments
+    put:
+      consumes:
+      - application/json
+      - text/xml
+      description: updateComment
+      operationId: updateComment
+      parameters:
+      - description: userId
+        in: path
+        name: userId
+        required: true
+        type: integer
+      - description: postId
+        in: path
+        name: postId
+        required: true
+        type: integer
+      - description: commentId
+        in: path
+        name: commentId
+        required: true
+        type: integer
+      - description: post
+        in: body
+        name: comment
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdateComment'
+      - description: Authorization
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      - text/xml
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Comment'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/server.Message'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/server.Message'
+      security:
+      - ApiKeyAuth: []
+      summary: updateComment
+      tags:
+      - comments
   /health:
     get:
       consumes:
